--- a/package.json
+++ b/package.json
@@ -70,5 +70,6 @@
   "lint-staged": {
     "*.{js,ts,tsx}": "eslint --cache --fix",
     "*.{js,ts,tsx,css,md,json}": "prettier --write"
-  }
+  },
+  "packageManager": "pnpm@10.12.1"
 }
