--- a/.github/workflows/main_saleor-razorpay.yml
+++ b/.github/workflows/main_saleor-razorpay.yml
@@ -25,8 +25,9 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
-          npm run build --if-present
+          npm install -g pnpm
+          pnpm install
+          pnpm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
@@ -68,4 +69,3 @@ jobs:
           app-name: 'saleor-razorpay'
           slot-name: 'Production'
           package: .
-          
