--- a/.github/workflows/main_saleor-razorpay.yml
+++ b/.github/workflows/main_saleor-razorpay.yml
@@ -27,8 +27,7 @@ jobs:
         run: |
           npm install -g pnpm
           pnpm install
-          pnpm run build --if-present
-          npm run test --if-present
+          pnpm run build
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
