--- a/package.json
+++ b/package.json
@@ -31,21 +31,13 @@
     "@saleor/macaw-ui": "1.1.10",
     "@urql/exchange-auth": "^1.0.0",
     "next": "15.1.7",
+    "razorpay": "^2.9.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "urql": "^4.0.2"
   },
   "packageManager": "pnpm@10.12.1",
   "devDependencies": {
-    "@vitejs/plugin-react": "4.2.1",
-    "graphql": "^16.8.1",
-    "graphql-tag": "^2.12.6",
-    "jsdom": "^20.0.3",
-    "vite": "5.2.10",
-    "vitest": "1.5.2",
-    "vite-tsconfig-paths": "5.1.4",
-    "tsx": "4.20.3",
-    "json-schema-to-typescript": "^15.0.4",
     "@graphql-codegen/add": "3.2.0",
     "@graphql-codegen/cli": "3.3.1",
     "@graphql-codegen/introspection": "3.0.1",
@@ -60,16 +52,24 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@vitejs/plugin-react": "4.2.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
+    "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
+    "jsdom": "^20.0.3",
+    "json-schema-to-typescript": "^15.0.4",
     "prettier": "^2.8.2",
-    "typescript": "5.0.4"
+    "tsx": "4.20.3",
+    "typescript": "5.0.4",
+    "vite": "5.2.10",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "1.5.2"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": "eslint --cache --fix",
     "*.{js,ts,tsx,css,md,json}": "prettier --write"
-  },
-  "packageManager": "pnpm@10.12.1"
+  }
 }
