--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "razorpay": "^2.9.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "urql": "^4.0.2"
+    "urql": "^4.0.2",
+    "zod": "^3.22.4"
   },
   "packageManager": "pnpm@10.12.1",
   "devDependencies": {
