--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
   "dependencies": {
     "@saleor/app-sdk": "1.1.1",
     "@saleor/macaw-ui": "1.1.10",
+    "@types/uuid": "^10.0.0",
     "@urql/exchange-auth": "^1.0.0",
     "next": "15.1.7",
     "razorpay": "^2.9.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "urql": "^4.0.2",
+    "uuid": "^11.1.0",
     "zod": "^3.22.4"
   },
   "packageManager": "pnpm@10.12.1",
